# docs/swagger.yaml
@@ -160,6 +160,8 @@ definitions:
         type: string
       id:
         type: integer
+      image_url:
+        type: string
       rating:
         type: number
     type: object
@@ -342,6 +344,42 @@ definitions:
     - new_password
     - re_password
     type: object
+  response.GetSize:
+    properties:
+      id:
+        type: integer
+      size:
+        type: string
+    type: object
+  response.ProductDetail:
+    properties:
+      brand_id:
+        type: integer
+      category_id:
+        type: integer
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      image_url:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+      reviews:
+        items:
+          $ref: '#/definitions/model.ProductReview'
+        type: array
+      size:
+        items:
+          $ref: '#/definitions/response.GetSize'
+        type: array
+      updated_at:
+        type: string
+    type: object
   response.User:
     properties:
       created_at:
@@ -510,8 +548,6 @@ paths:
             allOf:
             - $ref: '#/definitions/helper.Response'
             - properties:
-                code:
-                  type: string
                 data:
                   $ref: '#/definitions/model.Address'
                 isError:
@@ -1305,11 +1341,11 @@ paths:
       summary: Login
       tags:
       - auth
-  /products/{id}/reviews/:
+  /products/{id}:
     get:
       consumes:
       - application/json
-      description: get the bank corresponding to the input Id
+      description: get the product corresponding to the input Id
       parameters:
       - description: ID of the Product
         in: path
@@ -1326,43 +1362,17 @@ paths:
             - $ref: '#/definitions/helper.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/model.ProductReview'
+                  $ref: '#/definitions/response.ProductDetail'
                 isError:
                   type: boolean
                 status:
                   type: string
               type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                code:
-                  type: integer
-                description:
-                  type: string
-                isError:
-                  type: boolean
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                code:
-                  type: integer
-                description:
-                  type: string
-                isError:
-                  type: boolean
-              type: object
       security:
       - JWT: []
-      summary: Get bank identified by the given id
+      summary: Get product identified by the given id
       tags:
-      - ShowReviewLimit
+      - Product
   /register:
     post:
       consumes:
