# domain/response/get_review.go
@@ -5,5 +5,5 @@ import "github.com/phincon-backend/laza/domain/model"
 type GetReviews struct {
 	Avrg_Rating float64               `json:"rating_avrg"`
 	Total       int                   `json:"total"`
-	Reviews     []model.ProductReview `json:"products"`
+	Reviews     []model.ProductReview `json:"reviews"`
 }
